--- a/index.html
+++ b/index.html
@@ -1,27 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Study Bloom - Coming Soon</title>
-    <link rel="stylesheet" href="styles.css">
-    <!-- Add Font Awesome CDN -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>StudyBloom - About</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 </head>
 <body>
-    <div class="container">
+    <header>
+        <div class="header-logo">StudyBloom</div>
+        <nav>
+            <ul>
+                <li><a href="index.html">About</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="timer.html">Pomodoro</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main class="container">
         <div class="logo">
-            <h1>Study Bloom</h1>
+            <h1>Welcome to StudyBloom</h1>
         </div>
-        <p class="coming-soon">Coming Soon...</p>
+        <p class="tagline">Empowering students to bloom through mindful study</p>
+        <p>Hi! I'm Kay :), the creator of StudyBloom. This platform is where I share productivity tools, study motivation, and my journey as a student. Connect with me:</p>
         <div class="social-icons">
             <a href="https://www.instagram.com/_study_bloom_/" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://www.youtube.com/@_study_bloom_" target="_blank"><i class="fab fa-youtube"></i></a>
             <a href="mailto:studybloom7@gmail.com"><i class="fas fa-envelope"></i></a>
         </div>
-        <footer>
-            <p>Stay tuned for updates!</p>
-        </footer>
-    </div>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 StudyBloom. All rights reserved.</p>
+    </footer>
 </body>
 </html>
